--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+*{
+  text-align: center;
+  color: white;
+  background-color: rgb(35 42 48);
+}
