--- a/src/styles/modal.scss
+++ b/src/styles/modal.scss
@@ -58,10 +58,11 @@
 
 }
 input{
-  font-weight: 600;
+  color: black;
+  font-weight: 500;
   padding-left: 10px;
   background: rgb(217, 226, 248);
-  font-size: 1.5rem;
+  font-size: 1.4rem;
 }
 button{
   margin: 3px;
