--- a/src/styles/listedepenses.scss
+++ b/src/styles/listedepenses.scss
@@ -5,9 +5,12 @@
   margin-top: 20px;
 }
  .depense-container {
-  min-width: 800px;
+  border-radius: 20px;
+  z-index: 1000;
+  position: absolute;
+  min-width: 480px;
   display: flex;
-  background: rgb(35 42 48);
+  background: rgb(35 42 48 / 44%);
   justify-content: center;
   flex-direction: column;
   align-items: center;
@@ -28,7 +31,6 @@
   align-items: flex-start;
 }
 .depense-ligne {
-  margin-bottom: 1px;
   margin-left: 62px;
   color: wheat;
   background-color: #394652;
