--- a/src/styles/modal.scss
+++ b/src/styles/modal.scss
@@ -77,7 +77,8 @@ button{
 }
 button:hover{
   cursor: pointer;
-    background: rgb(165, 188, 220);
-    color :rgb(80, 8, 8);
-    font-size: 1rem;
+    background: rgb(254, 254, 254);
+    color :rgb(64, 70, 94);
+    font-weight: 600;
+    // font-size: 1rem;
   }
