--- a/src/styles/recherche.scss
+++ b/src/styles/recherche.scss
@@ -114,10 +114,9 @@ tr  :hover{
   background-color: whitesmoke;
 }
 .annule{
-  color: black;
-  background-color: darksalmon;
-  font-size: 1.4rem;
+  background: #43403d;
+  color: #d4caca;
+  font-size: 2.4rem;
   margin-left: 55px;
-  border-radius: 10px;
   font-weight: 400;
 }
