--- a/src/styles/modif.scss
+++ b/src/styles/modif.scss
@@ -1,18 +1,20 @@
 .modif-msg{
   display:none;
-  top: 662px;
-  left: 0px;
+  height: 216px;
+  top: 545px;
+  left: 300px;
   position: fixed;
   z-index: 1000;
   border-radius: 20px;
   font-weight: 600;
-  color: #5d362d;
+  color: #4a3219;
   font-size: 2rem;
   width: 516px;
   /* display: flex; */
   flex-direction: column;
   align-items: center;
-  background-color: #86837d;
+  background-color: #fce2ad;
+  justify-content: center;
 }
 
 .modif-container{
