maj edition dans recherche

--- a/src/styles/modif.scss
+++ b/src/styles/modif.scss
@@ -29,6 +29,7 @@
   box-shadow: 7px 4px 10px 1px #aca8a896;
 }
 
+
 .modif-label{
   font-weight: 600;
   font-size: 1.2rem;
@@ -55,6 +56,10 @@
   margin-right: 255px;
   display: inline-block;
   background: #c4b08d;
+}
+.fdset-modif{
+  border: none;
+  background: #86837d;
 }
 
 .modif-btn{
