--- a/src/styles/modif.scss
+++ b/src/styles/modif.scss
@@ -1,21 +1,21 @@
-.modif-msg{
-  display:none;
-  height: 216px;
-  top: 545px;
-  left: 300px;
-  position: fixed;
-  z-index: 1000;
-  border-radius: 20px;
-  font-weight: 600;
-  color: #4a3219;
-  font-size: 2rem;
-  width: 516px;
-  /* display: flex; */
-  flex-direction: column;
-  align-items: center;
-  background-color: #fce2ad;
-  justify-content: center;
-}
+// .modif-msg{
+//   display:none;
+//   height: 216px;
+//   top: 545px;
+//   left: 300px;
+//   position: fixed;
+//   z-index: 1000;
+//   border-radius: 20px;
+//   font-weight: 600;
+//   color: #4a3219;
+//   font-size: 2rem;
+//   width: 516px;
+//   /* display: flex; */
+//   flex-direction: column;
+//   align-items: center;
+//   background-color: #fce2ad;
+//   justify-content: center;
+// }
 
 .modif-container{
   padding: 30px;
