--- a/src/styles/recherche.scss
+++ b/src/styles/recherche.scss
@@ -17,6 +17,13 @@
 #budget-recherche{
   margin-top: 10px;
 }
+#dbl-clic{
+  background:"aliceblue";
+  color: #c3f88c;
+  display: flex;
+  justify-content: center;
+  flex-wrap: nowrap;
+}
 #pointe-container{
   margin-top: 10px;
 }
