--- a/src/styles/pointage.scss
+++ b/src/styles/pointage.scss
@@ -2,9 +2,9 @@
 .h2-pointage {
   display: flex;
   justify-content: center;
-  color: rgb(226, 225, 225);
+  color: #c4b08d;
   margin-bottom: 20px;
-  font-size: 1.8rem;
+  font-size: 2rem;
 }
 .point-container{
   display: flex;
