--- a/src/styles/recherche.scss
+++ b/src/styles/recherche.scss
@@ -6,8 +6,8 @@
   display: flex;
   /* margin: auto; */
   font-size: 2rem;
-  background: #28272d;
-  /* color: red; */
+  background: #232a30;
+ color: #c4b08d;
   /* font-weight: 500; */
   justify-content: center;
 }
