--- a/src/styles/recherche.scss
+++ b/src/styles/recherche.scss
@@ -1,69 +1,65 @@
 #btn-valid {
-  margin:auto;
-  
+  margin: auto;
 }
 .h2-Recherche {
   display: flex;
-  /* margin: auto; */
   font-size: 2rem;
   background: #232a30;
- color: #c4b08d;
-  /* font-weight: 500; */
+  color: #c4b08d;
   justify-content: center;
 }
-#depuis-container{
+#depuis-container {
   margin-bottom: 20px;
 }
-#budget-recherche{
+#budget-recherche {
   margin-top: 10px;
 }
-#dbl-clic{
-  background:"aliceblue";
+#dbl-clic {
+  background: "aliceblue";
   color: #c3f88c;
   display: flex;
   justify-content: center;
   flex-wrap: nowrap;
 }
-#pointe-container{
+#pointe-container {
   margin-top: 10px;
 }
 #recherche-cont {
-  
-    display: none;
-    margin: auto;
-    font-size: 1.3rem;
-    width: 489px;
-    background: #43403d;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 20px;
-    margin-bottom: 20px;
+  display: none;
+  margin: auto;
+  font-size: 1.3rem;
+  width: 620px;
+  background: #43403d;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 20px;
+  margin-bottom: 20px;
 }
 
-#bsbbva{
+#bsbbva {
   margin-top: 10px;
 }
 
 .bourso-container {
   padding: 10px;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   background: #43403d;
 }
 .recherche-form {
-  width: 100%;
+  width: 80%;
   background-color: #86837d;
   display: flex;
-  margin-Top: 10px;
-  margin-Bottom: 20px;
-  flex-Direction: column;
-  align-Items: flex-end;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  flex-direction: column;
+  align-items: flex-end;
 }
-.label-saisie{
-    padding-right: 31px;
-    font-size: 1.2rem;
-    color: white;
+.label-saisie {
+  padding-right: 31px;
+  font-size: 1.2rem;
+  color: white;
 }
-.input-recherche{
+.input-recherche {
   margin-bottom: 5px;
   margin-top: 5px;
   padding-top: 8px;
@@ -74,11 +70,10 @@
   border: none;
 }
 
-
-
-#tbch-pointage{
-  display:flex;
+#tbch-pointage {
+  display: none;
   justify-content: center;
+  flex-direction: column;
 }
 th {
   font-weight: 400;
@@ -98,30 +93,31 @@ td {
   background: #090808;
 }
 
-tr  :hover{
+tr :hover {
   background-color: rgb(155, 156, 117);
 }
 .r-total {
   font-size: 1.4rem;
 }
 
-.div-span , .span-annule{
+.div-span,
+.span-annule {
   margin-top: 10px;
   margin-bottom: 20px;
   background-color: #43403d;
 }
-.lancer{
-  color:black;
+.lancer {
+  color: black;
   background-color: wheat;
   font-size: 1.4rem;
   margin-left: 2px;
   border-radius: 10px;
   font-weight: 400;
 }
-.lancer :hover{
+.lancer :hover {
   background-color: whitesmoke;
 }
-.annule{
+.annule {
   background: #43403d;
   color: #d4caca;
   font-size: 2.4rem;
