--- a/src/styles/pointage.scss
+++ b/src/styles/pointage.scss
@@ -14,7 +14,11 @@
   margin :auto;
   min-width: 1110px;
 }
-
+.tbc-pointage{
+  margin: auto;
+  max-width: 1302px;
+  min-width: 1110px;
+}
  .pt-total{
   background:"aliceblue";
   color: #c3f88c;
