--- a/src/styles/recherche.scss
+++ b/src/styles/recherche.scss
@@ -83,8 +83,9 @@
 }
 
 #tbch-pointage {
+  max-width: 1302px;
   display: none;
-  justify-content: center;
+  margin: auto;
   flex-direction: column;
 }
 th {
