--- a/src/styles/modal.scss
+++ b/src/styles/modal.scss
@@ -7,27 +7,30 @@
   left: 35vw;
   width: 404px;
   height: 222px;
-  background: rgba(125, 131, 154, 0.5);
-  display: flex;
-  padding: 16px;
-  border: solid 1px white;
-  border-radius: 32px;
-  align-items: center;
-  justify-content: center;
+  // background: rgba(125, 131, 154, 0.5);
+  // display: flex;
+  // padding: 16px;
+  // border: solid 1px white;
+   border-radius: 32px;
+  // align-items: center;
+  // justify-content: center;
 }
 
 .modal-content {
+  filter: drop-shadow(13px 12px 13px #9fa2a4);
   display: flex;
   flex-direction: column;
-  width: 95%;
+  width: 100%;
+  height: 100%;
   border-radius: 16px;
-  background: rgb(57 70 82);
+  background: #394652;
   align-items: center;
-  height: 95%;
+  
 }
 .modal-tittle{
+  font-size: 1.5rem;
   padding: 0px;
-  background: rgb(57 70 82);
+  background: rgb(57, 70, 82);
 }
 .modal-header,
 .modal-footer {
@@ -37,7 +40,9 @@
 }
 .modal-header{
   
-  padding: 11px;
+  margin-bottom: 20px;
+  margin-top: 25px;
+  padding: 4px;
 
 }
 
