--- a/src/styles/modal.scss
+++ b/src/styles/modal.scss
@@ -7,35 +7,29 @@
   left: 35vw;
   width: 404px;
   height: 222px;
-  // background: rgba(125, 131, 154, 0.5);
-  // display: flex;
-  // padding: 16px;
-  // border: solid 1px white;
    border-radius: 32px;
-  // align-items: center;
-  // justify-content: center;
 }
 
 .modal-content {
-  filter: drop-shadow(13px 12px 13px #9fa2a4);
+  filter: drop-shadow(3px 2px 5px #7d7f80);
   display: flex;
   flex-direction: column;
   width: 100%;
   height: 100%;
   border-radius: 16px;
-  background: #394652;
+  background: #223142;
   align-items: center;
   
 }
 .modal-tittle{
   font-size: 1.5rem;
   padding: 0px;
-  background: rgb(57, 70, 82);
+  background:#223142;
 }
 .modal-header,
 .modal-footer {
   color: wheat;
-  background: rgb(57 70 82);
+  background: #223142;
  
 }
 .modal-header{
@@ -49,7 +43,7 @@
 .modal-body { 
   margin-bottom: 49px;
   width: 95%;
-  background: rgb(57 70 82);
+  background: #223142;
   height: 16px;
   align-items: center;
   color: wheat;
