--- a/src/styles/pointage.scss
+++ b/src/styles/pointage.scss
@@ -2,7 +2,7 @@
 .h2-pointage {
   display: flex;
   justify-content: center;
-  color: #c4b08d;
+  color: #fefffe;
   margin-bottom: 20px;
   font-size: 2rem;
 }
@@ -39,6 +39,6 @@
   background-color: rgb(34, 32, 29);
 }
 #td-p-pointage:hover{
-  background-color: rgb(34, 71, 51);
+  background-color: rgb(159, 75, 144);
    cursor: pointer;
 }
