--- a/src/styles/modif.scss
+++ b/src/styles/modif.scss
@@ -48,6 +48,19 @@
   color: #4d3413;
   font-weight: 600;
 }
+.modif-banque-radio {
+  margin-left: 5px;
+
+  margin-bottom: 5px;
+  border: none;
+  background: #c4b08d;
+  font-size: 1.3rem;
+  padding: 10px;
+  border-radius: 20px;
+  color: #4d3413;
+  font-weight: 600;
+}
+
 
 .modif-menag{
   margin-bottom: 10px;
