--- a/src/styles/recherche.scss
+++ b/src/styles/recherche.scss
@@ -2,12 +2,12 @@
   margin: auto;
 }
 .annule {
-  padding: 7px;
-  background: #43403d;
-  color: #d4caca;
-  font-size: 1.4rem;
-  margin-left: 104px;
-  font-weight: 400;
+    background: #43403d;
+    color: #c4b08d;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
+    padding: 8px;
 }
 #annule{
   display:none;
@@ -15,13 +15,14 @@
 
 .h2-Recherche {
   display: flex;
-  font-size: 2rem;
+  font-size: 1.4rem;
   background: #232a30;
   color: #c4b08d;
-  justify-content: center;
+  justify-content: space-evenly;
+  align-items: center;
 }
 #depuis-container {
-  margin-bottom: 20px;
+  margin-bottom: 6px;
 }
 #budget-recherche {
   margin-top: 10px;
@@ -115,8 +116,8 @@ tr :hover {
 
 .div-span,
 .span-annule {
-  margin-top: 10px;
-  margin-bottom: 20px;
+  margin-top: 2px;
+  margin-bottom: 2px;
   background-color: #43403d;
 }
 .lancer {
