--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,41 +1,34 @@
-
-.navbar{
+.navbar {
   margin-top: 5px;
   margin-bottom: 2px;
   display: flex;
-  /* margin: auto; */
   flex-direction: column;
   align-items: center;
-  
- }
+}
 
-  .navbar_href{
-    display: inline-grid;
-    grid-template-columns: auto auto auto auto auto;
-    font-size: 1.2rem;
-    align-items: center;
-
-  }
-   .navlk {
-    text-decoration: none;
-    color: rgb(198, 198, 227);
-    font-size: 1.3rem;
-    font-style: inherit;
-    padding-right: 18px; padding-left: 18px;
-    padding-top: 2px; padding-bottom: 5px;
-    margin: 7px;
-    border-radius: 21px;
-    border: 1px solid rgba(193, 206, 233, 0.549);
-    resize: none;
-    box-shadow: 4px 2px 6px rgba(76, 112, 149, 0.6);
-   
-    }
-    .navlk:hover{
-       background: rgb(178, 186, 208);
-      color: black;
-      font-weight: 400;
-    }
-
-
-
-
+.navbar_href {
+  font-size: 1.2rem;
+  align-items: center;
+  margin-top: 0.8rem;
+  margin-bottom: 0.5rem;
+}
+.navlk {
+  text-decoration: none;
+  color: rgb(198, 198, 227);
+  font-size: 1.3rem;
+  font-style: inherit;
+  padding-right: 18px;
+  padding-left: 18px;
+  padding-top: 2px;
+  padding-bottom: 5px;
+  margin: 7px;
+  border-radius: 21px;
+  border: 1px solid rgba(193, 206, 233, 0.549);
+  resize: none;
+  box-shadow: 4px 2px 6px rgba(76, 112, 149, 0.6);
+}
+.navlk:hover {
+  background: rgb(178, 186, 208);
+  color: black;
+  font-weight: 400;
+}
