--- a/src/styles/saisie.scss
+++ b/src/styles/saisie.scss
@@ -20,6 +20,10 @@
   margin: auto;
 }
 
+.container-total{
+  display :flex;
+  flex-direction: row;
+}
 .fdset-saisie {
   border: none;
   margin-top: 3px;
